# f-it-do-it-live

./: .gitignore  CMakeLists.txt  FindSFML.cmake  readme.md
scripts/: install-sfml-linux-dependencies.sh
src/common/: astar_pathfinder.cpp  astar_pathfinder.h  atomic_wrapper.h  audio.h  canvas.cpp  canvas.h  color.cpp  color.h  color_gradient.cpp  color_gradient.h  cursor.cpp  cursor.h  dirent.h  double_buffer.h  draw.cpp  draw.h  engine.cpp  engine.h  fi_math.cpp  fi_math.h  frame_clock.h  grid.h  gui.cpp  gui.h  input.cpp  input.h  loading_plugins.h  mesh_builder.cpp  mesh_builder.h  non_copyable.h  non_movable.h  os.h  pauseable_clock.cpp  pauseable_clock.h  picojson.h  plugins.cpp  plugins.h  random.cpp  random.h  resource.h  (+11 more)
src/common/gui/: gui.cpp  gui.h
src/common/gui/complex_widgets/: gui_camera_zoom.cpp  gui_camera_zoom.h  gui_test.cpp  gui_test.h  gui_tick_controller.cpp  gui_tick_controller.h
src/common/imgui/: versions
src/common/moodycamel_queue/: blocking_concurrent_queue.h  concurrent_queue.h
src/empty-app/: main.cpp
src/empty-project/: main.cpp
src/it-always-ends-in-nuclear-war/: app.h  main.cpp
src/it-didnt-end-in-nuclear-war/: app.h  main.cpp
src/it-usually-ends-in-nuclear-war/: ai.h  app.h  audio.h  cheats.cpp  cheats.h  cities.cpp  cities.h  color_schemes.cpp  color_schemes.h  controls.cpp  controls.h  drawable_grid_lines.cpp  drawable_grid_lines.h  drawable_map.cpp  drawable_map.h  drawable_map_edges.cpp  drawable_map_edges.h  globals.cpp  globals.h  iueinw.h  last_plugin_core_state.h  main.cpp  map.cpp  map.h  map_generation.cpp  map_generation.h  map_generation_large_board.cpp  map_generation_small_board_land_and_ocean.cpp  map_generation_small_board_tile_types.cpp  map_generation_tile_height.cpp  map_generation_tile_shadows.cpp  map_size.h  mouse_tile_tracker.cpp  mouse_tile_tracker.h  name_tags.cpp  name_tags.h  nations.cpp  nations.h  path.h  pathfinding.h  (+12 more)
src/terrible-geometric-video/: main.cpp
third-party-licenses/: Roboto.txt  RobotoMono.txt  filesystem.txt  icon.txt  nlohmann-json.txt  picojson.txt  sfml-frame-clock.txt  sfml-pausable-clock.txt  sfml2.txt  zlib.txt
